--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login with Canvas</title>
-</head>
-<body>
-    <h1>Login with Canvas</h1>
-    <form method="post" action="{{ url_for('login') }}">
-        <label for="access_token">Enter your Canvas Access Token:</label>
-        <input type="text" id="access_token" name="access_token" required>
-        <button type="submit">Login</button>
-    </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log In</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="white-box">
+        <div class="header">
+          <img src="{{ url_for('static', filename='element/suck1.svg') }}" alt="logo" />
+          <h2>Log In</h2>
+        </div>
+        <div class="api-link">
+          <div class="connect-account">
+            <div class="click-button">
+              <img src="{{ url_for('static', filename='element/canvas.svg') }}" />
+              Connect to Canvas
+            </div>
+            <div class="separator">OR</div>
+            <p>Enter your Canvas access code to log in.</p>
+            <form method="post" action="/login">
+              <p>Your Access Code</p>
+              <input type="text" id="access_code" name="access_code" required />
+              <br />
+              <button type="submit" class="click-button">Log In</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
